# mytt

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  start.sh
backend/local_servers/: stt_server.py  tts_server.py
backend/scripts/: bench_latency.py  bench_wer.py
backend/src/tutor_agent/: __init__.py  agent.py  bilingual.py  config.py  data_channel.py  extract.py  session_factory.py  text_pipeline.py  tools.py  tutor.py  wiring.py
backend/src/tutor_agent/eval/: __init__.py  wer.py
backend/src/tutor_agent/llm/: __init__.py  factory.py  mock.py
backend/src/tutor_agent/search/: __init__.py  base.py  brave.py  factory.py  mock.py  searxng.py  tavily.py
backend/src/tutor_agent/stt/: __init__.py  factory.py  mock.py  nemotron.py
backend/src/tutor_agent/token_server/: __init__.py  server.py
backend/src/tutor_agent/tts/: __init__.py  factory.py  mock.py  vieneu.py
backend/tests/: test_adapter_factories.py  test_agent_key.py  test_bilingual.py  test_config.py  test_data_channel.py  test_extract.py  test_integration.py  test_llm.py  test_local_servers.py  test_search.py  test_session_factory.py  test_stt.py  test_text_pipeline.py  test_token_server.py  test_tools.py  test_tts.py  test_tutor.py  test_wer.py  test_wiring.py
deployment/cloud/: .env.example  .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml  livekit.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/__tests__/: transcript.test.ts  transcriptStore.test.ts
frontend/src/: App.tsx  api.ts  styles.css  transcript.ts  transcriptStore.ts
frontend/src/components/: Badge.tsx  Composer.tsx  ConfigPane.tsx  SessionPane.tsx  SetupGate.tsx  Tooltip.tsx  TopBar.tsx  Transcript.tsx
frontend/src/hooks/: useLocalProfile.ts  useRoom.ts
